# CoursAR

./: .gitignore  index.html
2016/Course4/: Itseezopencv_contrib Repository for OpenCV's extra modules.URL  OpenCV ArUco marker detection (aruco module).URL
2017/Course4/: Aruco Marker Generator.URL
2018/Course2/: Another Dose of AugmentedVirtual Reality at CES 2018 Augmented Reality India, Virtual Reality India & 3D Studio in Chennai, .URL  Introduction to Unity Getting Started – Part 12.URL  It’s time to get ready for augmented reality Augmented Reality India, Virtual Reality India & 3D Studio in Chennai, India..URL  Unity - Manual Introduction to components.URL
2018/Course3/: Getting Started with Vuforia in Unity.URL  Image Targets in Unity Tutorial - Vuforia - Augmented Reality (new) - YouTube.URL  Unity Reference ITrackableEventHandler Interface Reference.URL  Vuforia in Unity Build cross-platform AR apps – Unity Blog.URL
2019/Course4/exemple-Aruco/: CMakeLists.txt  introduction_windows.cpp
2019/Course4/exemple-Aruco/aruco/lib/pkgconfig/: aruco-uninstalled.pc  aruco.pc
2019/Course4/exemple-Aruco/aruco/share/aruco/cmake/: arucoConfig-debug.cmake  arucoConfig-release.cmake  arucoConfig.cmake
2021/: add-vuforia-package-9-7-5.unitypackage
2022/: RA-TD1 - 2022.docx  RA-TD2 - 2022.docx  RA-TD4 - 2022.docx
2022/Unity/: Unity Learn.URL  (+2 more)
Course4/: OpenCV OpenCV.URL
ImageProcessingJSfeat/: ImageProcessingJSfeat.html
ImageProcessingThreejs/: ImageProcessingTreeJS.html  style.css
Student-Projects/: readme.md
rendu_projet/: debug-posit.html
(+65 files in other folders)
